--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mission to Mars - Teams Dashboard</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -30,15 +30,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="/">easterdash</a>
+            <a class="navbar-brand" href="/">Mission to Mars</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li ng-class="{active: isActive('/')}"><a href="#!/">Show me the money</a></li>
-              <li ng-class="{active: isActive('/admin')}"><a ng-href="#!/admin">admin</a></li>
-              <li ng-class="{active: isActive('/stories')}"><a ng-href="#!/stories">stories</a></li>
+              <li ng-class="{active: isActive('/')}"><a href="#!/">Team Standings</a></li>
+              <li ng-class="{active: isActive('/admin')}"><a ng-href="#!/admin">Admin</a></li>
+              <li ng-class="{active: isActive('/stories')}"><a ng-href="#!/stories">Stories</a></li>
             </ul>
 
             <button type="button" class="navbar-btn btn btn-default pull-right" ng-click="showModal('setup')">
@@ -55,7 +55,6 @@
 
     <div class="footer">
       <div class="container">
-        <!-- <p><span class="glyphicon glyphicon-wrench"></span> by mymedialab.co.uk</p> -->
         <p><span class="glyphicon glyphicon-scissors"></span> cut-n-pasted with care</p>
       </div>
     </div>
@@ -79,22 +78,8 @@
       </div>
     </modal-dialog>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-    -->
-
     <script src="http://code.highcharts.com/adapters/standalone-framework.js"></script>
-    <!-- <script src="http://code.highcharts.com/highcharts.src.js"></script> -->
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-
     <script src="vendor.js"></script>
     <script src="app.js"></script>
 </body>
