Adds the ability to deduct costs by minute
Adds the ability to set the hire cost of the Robot and deducting money by selecting the number of minutes from a drop down.

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,12 @@
 
               </div>
           </div>
+          <div class="form-group">
+              <label class="col-sm-3" for="hire-cost">Robot Hire Cost</label>
+              <div class="col-sm-9">
+                <input type="text" ng-model="settings.robotHireCost" id="hire-cost" class="form-control">
+              </div>
+          </div>
           <hr />
           <div class="form-group">
               <div class="col-sm-9 col-sm-offset-3">
